# STT-API

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_vllm  README.md  TROUBLESHOOTING_ONLINE_DIARIZATION.md  benchmark_vad.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  stress-test-cancel.yaml  stress-test-force-alignment.yaml  stress-test-ws-cancel.yaml  stress-test-ws.yaml  stress-test.yaml  stress_test.py  stress_test_cancel.py  stress_test_force_alignment.py  stress_test_ws.py  stress_test_ws_cancel.py  test.yaml  vllm.yaml
app/: clustering_torch.py  diarization.py  index.html  main.py  nemo_featurization.py  nemo_speaker_vector.py
app/force_alignment/: model.py  norm_config.py  punctuations.lst  text_utils.py
references/malaya_speech/model/: clustering.py
references/malaya_speech/nemo/: conv_asr.py  jasper.py  tdnn_attention.py
references/malaya_speech/supervised/: classification.py
references/malaya_speech/torch_model/: nemo.py
references/malaya_speech/utils/: nemo_featurization.py  padding.py  torch_utils.py
references/mesolitica/app/: main.py
references/tts/: main.py
tests/: run_tests.sh  test_diarization.py  test_diarization_integration.py  test_integration.py  test_main.py
tests/test_outputs/: TEST_RESULTS.md  ks-184_offline.json  ks-184_online.json  muzaha_offline.json  muzaha_online.json  pakar_offline.json  pakar_online.json
