[project]
name = "stt-api"
version = "0.1.0"
description = "Long audio transcription API with VAD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.2",
    "python-multipart",
    "torch",
    "torchaudio",
    "silero-vad",
    "numpy",
    "aiohttp",
    "uvicorn[standard]",
    "librosa",
    "soundfile",
    "malaya-speech==1.4.0rc2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
